Made away with NightLight AI
We have made way with the NightLight Ai brandname. Now all our porjects will be listed under the name of Ayush Anand only. Starting with this commit the brand name is depracated.

--- a/laststeps.html
+++ b/laststeps.html
@@ -6,8 +6,8 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Get Recommended Aproach to Fight Chronic Kidney Disease</title>
-<meta name="description" content="NephronAI - an AI project by NightLight AI that aims to uses AI to counter Chronic Kidney Disease.">
-<meta name="keywords" content="NephronAI, chronic kidney disease, nightlight ai, nephron, ayush, anand">
+<meta name="description" content="NephronAI - an AI project by Ayush Anand that aims to use AI to counter Chronic Kidney Disease.">
+<meta name="keywords" content="NephronAI, chronic kidney disease, nephron, ayush, anand">
 <script src="https://kit.fontawesome.com/c8b3c06dc0.js" crossorigin="anonymous"></script>
 <link href="https://kit-free.fontawesome.com/releases/latest/css/free-v4-shims.min.css" media="all" rel="stylesheet" id="font-awesome-5-kit-css">
 <link href="https://kit-free.fontawesome.com/releases/latest/css/free-v4-font-face.min.css" media="all" rel="stylesheet" id="font-awesome-5-kit-css">
@@ -34,7 +34,7 @@
 <li><a href="index">Home</a></li>
 <li><a href="contribute">Contribute</a></li>
 <li><a href="about">About</a></li>
-<li><a href="https://ayushanand18.github.io/">NightLight AI</a></li>
+<li><a href="https://ayushanand18.github.io/">Ayush Anand</a></li>
 </ul>
 <div class="extra-text visible-xs">
 <a href="#" class="probootstrap-burger-menu"><i>Menu</i></a>
@@ -44,7 +44,7 @@
 <li><a href="#"><i class="icon-facebook"></i></a></li>
 <li><a href="#"><i class="icon-instagram2"></i></a></li>
 </ul>
-<p><small>&copy; Copyright 2020 NightLight AI. All Rights Reserved.</small></p>
+<p><small>&copy; Copyright 2020 Ayush Anand. All Rights Reserved.</small></p>
 </div>
 </nav>
 </div>
@@ -179,7 +179,7 @@ If you'd like our services why not spread the word.<br><br>
 <div class="col-md-4">
 <div class="probootstrap-footer-widget">
 <h3>About NephronAI</h3>
-<p>Nephron AI is the child project of NightLight AI by Ayush Anand. This is a Machine Learning powered tool for diagnosis and analysis of causes for Chronic Kidney Disease with about 99.9%** accuracy.</p>
+<p>Nephron AI is a project  by Ayush Anand. This is a Machine Learning powered tool for diagnosis and analysis of causes for Chronic Kidney Disease with about 99.9%** accuracy.</p>
 <p><a href="about" class="link-with-icon">Learn More <i class=" icon-chevron-right"></i></a></p>
 </div>
 </div>
@@ -188,7 +188,7 @@ If you'd like our services why not spread the word.<br><br>
 <div class="probootstrap-footer-widget">
 <h3>Important Links</h3>
 <ul class="probootstrap-footer-widget">
-<li><a href="/">Home (NightLight AI)</a></li>
+<li><a href="/">Home (Ayush Anand)</a></li>
 <li><a href="/privacy">Privacy</a></li>
 <li><a href="terms">Terms</a></li>
 <small>By using our services you agree to our <a href="terms">Terms of Services</a> and <a href="/cookie">Cookie Policy</a></small>
@@ -212,7 +212,7 @@ If you'd like our services why not spread the word.<br><br>
 <div class="">
 <div class="text-center">
 <p>
-<small>&copy; 2020 <a href="https://ayushanand18.github.io/" target="_blank">NightLight AI</a>. All Rights Reserved. </small><br>
+<small>&copy; 2020 <a href="https://ayushanand18.github.io/" target="_blank">Ayush Anand</a>. All Rights Reserved. </small><br>
 <a href="#" class="js-backtotop">Back to top</a>
 </p>
 </div>
