--- a/terms.html
+++ b/terms.html
@@ -13,8 +13,8 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Terms of Service - NephronAI </title>
-<meta name="description" content="Terms of Service - NephronAI, an AI project by NightLight AI that aims to uses AI to counter Chronic Kidney Disease.">
-<meta name="keywords" content="terms, privacy, NephronAI, chronic kidney disease, nightlight ai">
+<meta name="description" content="Terms of Service - NephronAI, an AI project by Ayush Anand that aims to use AI to counter Chronic Kidney Disease.">
+<meta name="keywords" content="terms, privacy, NephronAI, chronic kidney disease">
 <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 <link rel="stylesheet" href="css/styles-merged.css">
 <link rel="stylesheet" href="css/style.min.css">
@@ -37,7 +37,7 @@
 <li class="active"><a href="index">Home</a></li>
 <li><a href="contribute">Contribute</a></li>
 <li><a href="about">About</a></li>
-<li><a href="https://ayushanand18.github.io/">NightLight AI</a></li>
+<li><a href="https://ayushanand18.github.io/">Ayush Anand</a></li>
 </ul>
 <div class="extra-text visible-xs">
 <a href="#" class="probootstrap-burger-menu"><i>Menu</i></a>
@@ -47,7 +47,7 @@
 <li><a href="#"><i class="icon-facebook"></i></a></li>
 <li><a href="#"><i class="icon-instagram2"></i></a></li>
 </ul>
-<p><small>&copy; Copyright 2020 NightLight AI. All Rights Reserved.</small></p>
+<p><small>&copy; Copyright 2020 Ayush Anand. All Rights Reserved.</small></p>
 </div>
 </nav>
 </div>
@@ -75,11 +75,11 @@
 <div class="row">
 <div class="col-lg-12 col-md-12 mb70 section-heading probootstrap-animate">
 <h3>
-  NephronAI (by NightLight AI)<br>
+  NephronAI (by Ayush Anand)<br>
   <small>Last updated: 22<sup>nd</sup> February 2020</small>
 </h3>
 <h4>Data Privacy.</h4><p class="lead" style="text-align:justify !important;">
-  Your privacy is important to us. Please read the <a href=”/privacy”>NightLight AI Privacy Policy</a> (the <b>"Privacy Policy"</b>) as it describes the types of data we collect from you and your devices (<b>"Data"</b>), how we use your Data, and the legal bases we have to process your Data. The Privacy Statement also describes how NephronAI uses your content, which are postings submitted by you to NightLight AI (the <b>“Company”</b>/<b>"us"</b>)  via our Services; and the raw input, files, photos, documents, and digital works that you upload, store, broadcast or share through the Services (<b>"Your Content"</b>). Where the processing is based on consent and to the extent permitted by law, by agreeing to these Terms, you consent to the company’s collection, use and disclosure of Your Content and Data as described in the Privacy Policy. In some cases, we will provide separate notice and request your consent as referenced in the Privacy Policy.
+  Your privacy is important to us. Please read the <a href=”/privacy”>Privacy Policy</a> (the <b>"Privacy Policy"</b>) as it describes the types of data we collect from you and your devices (<b>"Data"</b>), how we use your Data, and the legal bases we have to process your Data. The Privacy Statement also describes how NephronAI uses your content, which are postings submitted by you to the site (the <b>“Company”</b>/<b>"us"</b>)  via our Services; and the raw input, files, photos, documents, and digital works that you upload, store, broadcast or share through the Services (<b>"Your Content"</b>). Where the processing is based on consent and to the extent permitted by law, by agreeing to these Terms, you consent to the company’s collection, use and disclosure of Your Content and Data as described in the Privacy Policy. In some cases, we will provide separate notice and request your consent as referenced in the Privacy Policy.
 <h4>Your Content.</h4><p class="lead" style="text-align:justify !important;">
 Many of our Services allow you to store or share Your Content or receive material from others. We don’t claim ownership of Your Content. Your Content remains Your Content and you are responsible for it. To the extent necessary to provide the Services to you and others, to protect you and the Services, and to improve our products and services, you grant to us a worldwide and royalty-free intellectual property license to use Your Content, for example, to make copies of, retain, transmit, reformat, display, and distribute via communication tools Your Content on the Services. If you publish Your Content in areas of the Service where it is available broadly online without restrictions, Your Content may appear in demonstrations or materials that promote the Service.
 <h4>Code of Coduct.</h4><p class="lead" style="text-align:justify !important;">
@@ -152,7 +152,7 @@ Our Company respects the intellectual property rights of third parties. If you w
 <div class="col-md-4">
 <div class="probootstrap-footer-widget">
 <h3>About NephronAI</h3>
-<p>Nephron AI is the child project of NightLight AI by Ayush Anand. This is a Machine Learning powered tool for diagnosis and analysis of causes for Chronic Kidney Disease with about 99.9%** accuracy.</p>
+<p>Nephron AI is a project by Ayush Anand. This is a Machine Learning powered tool for diagnosis and analysis of causes for Chronic Kidney Disease with about 99.9%** accuracy.</p>
 <p><a href="about" class="link-with-icon">Learn More <i class=" icon-chevron-right"></i></a></p>
 </div>
 </div>
@@ -161,7 +161,7 @@ Our Company respects the intellectual property rights of third parties. If you w
 <div class="probootstrap-footer-widget">
 <h3>Important Links</h3>
 <ul class="probootstrap-footer-widget">
-<li><a href="/">Home (NightLight AI)</a></li>
+<li><a href="/">Home (Ayush Anand)</a></li>
 <li><a href="/privacy">Privacy</a></li>
 <li><a href="terms">Terms</a></li>
 <small>By using our services you agree to our <a href="terms">Terms of Services</a> and <a href="/cookie">Cookie Policy</a></small>
@@ -185,7 +185,7 @@ Our Company respects the intellectual property rights of third parties. If you w
 <div class="">
 <div class="text-center">
 <p>
-<small>&copy; 2020 <a href="https://ayushanand18.github.io/" target="_blank">NightLight AI</a>. All Rights Reserved. </small><br>
+<small>&copy; 2020 <a href="https://ayushanand18.github.io/" target="_blank">Ayush Anand</a>. All Rights Reserved. </small><br>
 <a href="#" class="js-backtotop">Back to top</a>
 </p>
 </div>
