--- a/about.html
+++ b/about.html
@@ -12,8 +12,8 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>About NephronAI</title>
-<meta name="description" content="Know About NephronAI - an AI project that uses AI to fight Chronic Kidney Disease. &copy; NightLight AI">
-<meta name="keywords" content="NephronAI, about nephronai, nightlight ai, about">
+<meta name="description" content="Know About NephronAI - an AI project that uses AI to fight Chronic Kidney Disease. &copy; Ayush Anand">
+<meta name="keywords" content="NephronAI, about nephronai,Ayush Anand, ai,kidney,chronic kidney disease, about">
 <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 <link rel="stylesheet" href="css/styles-merged.css">
 <link rel="stylesheet" href="css/style.min.css">
@@ -37,7 +37,7 @@
 <li><a href="index">Home</a></li>
 <li><a href="contribute.html">Contribute</a></li>
 <li class="active"><a href="about">About</a></li>
-<li><a href="https://ayushanand18.github.io/">NightLightAI</a></li>
+<li><a href="https://ayushanand18.github.io/">Ayush Anand</a></li>
 </ul>
 <div class="extra-text visible-xs">
 <a href="#" class="probootstrap-burger-menu"><i>Menu</i></a>
@@ -47,7 +47,7 @@
 <li><a href="#"><i class="icon-facebook"></i></a></li>
 <li><a href="#"><i class="icon-instagram2"></i></a></li>
 </ul>
-<p><small>&copy; Copyright 2020 NightLight AI. All Rights Reserved.</small></p>
+<p><small>&copy; Copyright 2020 Ayush Anand. All Rights Reserved.</small></p>
 </div>
 </nav>
 </div>
@@ -98,7 +98,7 @@ But if chronic kidney disease is detected early then we can easily save hundreds
 </div>
 <div class="row">
 <div class="col-md-3 col-sm-6 probootstrap-animate">
-<img src="assets/prpic.png" alt="Ayush Anand NightLight AI" class="img-responsive">
+<img src="assets/prpic.png" alt="Ayush Anand " class="img-responsive">
 <h3>Ayush Anand</h3>
 <p>Founder | Owner</p>
 </div>
@@ -132,7 +132,7 @@ But if chronic kidney disease is detected early then we can easily save hundreds
 <div class="col-md-4">
 <div class="probootstrap-footer-widget">
 <h3>About NephronAI</h3>
-<p>Nephron AI is the child project of NightLight AI by Ayush Anand. This is a Machine Learning powered tool for diagnosis and analysis of causes for Chronic Kidney Disease with about 99.9%** accuracy.</p>
+<p>Nephron AI is a project by Ayush Anand. This is a Machine Learning powered tool for diagnosis and analysis of causes for Chronic Kidney Disease with about 99.9%** accuracy.</p>
 <p><a href="about" class="link-with-icon">Learn More <i class=" icon-chevron-right"></i></a></p>
 </div>
 </div>
@@ -141,7 +141,7 @@ But if chronic kidney disease is detected early then we can easily save hundreds
 <div class="probootstrap-footer-widget">
 <h3>Important Links</h3>
 <ul class="probootstrap-footer-widget">
-<li><a href="/">Home (NightLight AI)</a></li>
+<li><a href="/">Home (Ayush Anand)</a></li>
 <li><a href="/privacy">Privacy</a></li>
 <li><a href="terms">Terms</a></li>
 <small>By using our services you agree to our <a href="terms">Terms of Services</a> and <a href="/cookie">Cookie Policy</a></small>
@@ -165,7 +165,7 @@ But if chronic kidney disease is detected early then we can easily save hundreds
 <div class="">
 <div class="text-center">
 <p>
-<small>&copy; 2020 <a href="https://ayushanand18.github.io/" target="_blank">NightLight AI</a>. All Rights Reserved. </small><br>
+<small>&copy; 2020 <a href="https://ayushanand18.github.io/" target="_blank">Ayush Anand</a>. All Rights Reserved. </small><br>
 <a href="#" class="js-backtotop">Back to top</a>
 </p>
 </div>
