--- a/contribute.html
+++ b/contribute.html
@@ -14,7 +14,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>NephronAI | Contribute</title>
 <meta name="description" content="Help us grow bigger. Contribute to Nephron AI - an AI project that uses AI to fight Chronic Kidney Disease.">
-<meta name="keywords" content="AI, Chronic Kidney Disease, Ayush Anand, Ayush, Anand, NightLight, Nephron AI, Nephron">
+<meta name="keywords" content="AI, Chronic Kidney Disease, Ayush Anand, Ayush, Anand, Nephron AI, Nephron">
 <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 <link rel="stylesheet" href="css/styles-merged.css">
 <link rel="stylesheet" href="css/style.min.css">
@@ -37,7 +37,7 @@
 <li><a href="index">Home</a></li>
 <li class="active"><a href="contribute.html">Contribute</a></li>
 <li><a href="about">About</a></li>
-<li><a href="https://ayushanand18.github.io/">NightLightAI</a></li>
+<li><a href="https://ayushanand18.github.io/">Ayush Anand</a></li>
 
 </ul>
 <div class="extra-text visible-xs">
@@ -48,7 +48,7 @@
 <li><a href="#"><i class="icon-facebook"></i></a></li>
 <li><a href="#"><i class="icon-instagram2"></i></a></li>
 </ul>
-<p><small>&copy; Copyright 2020 NightLight AI. All Rights Reserved.</small></p>
+<p><small>&copy; Copyright 2020 Ayush Anand. All Rights Reserved.</small></p>
 </div>
 </nav>
 </div>
@@ -129,7 +129,7 @@
 <div class="col-md-4">
 <div class="probootstrap-footer-widget">
 <h3>About NephronAI</h3>
-<p>Nephron AI is the child project of NightLight AI by Ayush Anand. This is a Machine Learning powered tool for diagnosis and analysis of causes for Chronic Kidney Disease with about 99.9%** accuracy.</p>
+<p>Nephron AI is a project  by Ayush Anand. This is a Machine Learning powered tool for diagnosis and analysis of causes for Chronic Kidney Disease with about 99.9%** accuracy.</p>
 <p><a href="about" class="link-with-icon">Learn More <i class=" icon-chevron-right"></i></a></p>
 </div>
 </div>
@@ -138,7 +138,7 @@
 <div class="probootstrap-footer-widget">
 <h3>Important Links</h3>
 <ul class="probootstrap-footer-widget">
-<li><a href="/">Home (NightLight AI)</a></li>
+<li><a href="/">Home (Ayush Anand)</a></li>
 <li><a href="/privacy">Privacy</a></li>
 <li><a href="terms">Terms</a></li>
 <small>By using our services you agree to our <a href="terms">Terms of Services</a> and <a href="/cookie">Cookie Policy</a></small>
@@ -162,7 +162,7 @@
 <div class="">
 <div class="text-center">
 <p>
-<small>&copy; 2020 <a href="https://ayushanand18.github.io/" target="_blank">NightLight AI</a>. All Rights Reserved. </small><br>
+<small>&copy; 2020 <a href="https://ayushanand18.github.io/" target="_blank">Ayush Anand</a>. All Rights Reserved. </small><br>
 <a href="#" class="js-backtotop">Back to top</a>
 </p>
 </div>
