--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>NephronAI </title>
-<meta name="description" content="NephronAI - an AI project by NightLight AI that aims to uses AI to counter Chronic Kidney Disease.">
-<meta name="keywords" content="NephronAI, chronic kidney disease, nightlight ai">
+<meta name="description" content="NephronAI - an AI project by Ayush Anand that aims to use AI to counter Chronic Kidney Disease.">
+<meta name="keywords" content="NephronAI, chronic kidney disease">
 <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 <link rel="stylesheet" href="css/styles-merged.css">
 <link rel="stylesheet" href="css/style.min.css">
@@ -37,7 +37,7 @@
 <li class="active"><a href="index">Home</a></li>
 <li><a href="contribute">Contribute</a></li>
 <li><a href="about">About</a></li>
-<li><a href="https://ayushanand18.github.io/">NightLight AI</a></li>
+<li><a href="https://ayushanand18.github.io/">Ayush Anand</a></li>
 </ul>
 <div class="extra-text visible-xs">
 <a href="#" class="probootstrap-burger-menu"><i>Menu</i></a>
@@ -47,7 +47,7 @@
 <li><a href="#"><i class="icon-facebook"></i></a></li>
 <li><a href="#"><i class="icon-instagram2"></i></a></li>
 </ul>
-<p><small>&copy; Copyright 2020 NightLight AI. All Rights Reserved.</small></p>
+<p><small>&copy; Copyright 2020 Ayush Anand. All Rights Reserved.</small></p>
 </div>
 </nav>
 </div>
@@ -160,7 +160,7 @@ Even though I am a very young member of this planet, a 16 year-old high schooler
 <div class="col-md-4">
 <div class="probootstrap-footer-widget">
 <h3>About NephronAI</h3>
-<p style="text-align:justify;">Nephron AI is the child project of NightLight AI by Ayush Anand. This is a Machine Learning powered tool for diagnosis and analysis of causes for Chronic Kidney Disease with about 99.9%** accuracy.</p>
+<p style="text-align:justify;">Nephron AI is a project of by Ayush Anand. This is a Machine Learning powered tool for diagnosis and analysis of causes for Chronic Kidney Disease with about 99.9%** accuracy.</p>
 <p><a href="about" class="link-with-icon">Learn More <i class=" icon-chevron-right"></i></a></p>
 </div>
 </div>
@@ -169,7 +169,7 @@ Even though I am a very young member of this planet, a 16 year-old high schooler
 <div class="probootstrap-footer-widget">
 <h3>Important Links</h3>
 <ul class="probootstrap-footer-widget">
-<li><a href="/">Home (NightLight AI)</a></li>
+<li><a href="/">Home (Ayush Anand)</a></li>
 <li><a href="/privacy">Privacy</a></li>
 <li><a href="terms">Terms</a></li>
 <small>By using our services you agree to our <a href="terms">Terms of Services</a> and <a href="/cookie">Cookie Policy</a></small>
@@ -193,7 +193,7 @@ Even though I am a very young member of this planet, a 16 year-old high schooler
 <div class="">
 <div class="text-center">
 <p>
-<small>&copy; 2020 <a href="https://ayushanand18.github.io/" target="_blank">NightLight AI</a>. All Rights Reserved. </small><br>
+<small>&copy; 2020 <a href="https://ayushanand18.github.io/" target="_blank">Ayush Anand</a>. All Rights Reserved. </small><br>
 <a href="#" class="js-backtotop">Back to top</a>
 </p>
 </div>
