--- a/contribute.html
+++ b/contribute.html
@@ -20,10 +20,7 @@
 <link rel="stylesheet" href="css/style.min.css">
 <link rel="icon" type="image/png" href="assets/logo192.png">
 <link rel="stylesheet" href="css/classify.min.css">
-<!--[if lt IE 9]>
-      <script src="js/vendor/html5shiv.min.js"></script>
-      <script src="js/vendor/respond.min.js"></script>
-    <![endif]-->
+<link rel="stylesheet" href="https://s.pageclip.co/v1/pageclip.css" media="screen">
 </head>
 <body>
 
@@ -76,7 +73,7 @@
 <div class="col-md-8 col-md-offset-2 probootstrap-animate">
     <h1>Communicate to us your ideas...</h1>
     <p>And we'll get back to you as soon as possible</p>
-<form action="https://formspree.io/kingwarrior880@gmail.com" method="post" class="probootstrap-form">
+<form action="https://send.pageclip.co/q1FpNR9eYUV4T7GthQTOACIr08z5QrRM/nephron-ai" class="pageclip-form probootstrap-form" method="post" >
 <div class="form-group">
 <label for="name">Full Name</label>
 <input type="text" class="form-control" id="name" name="name">
@@ -94,7 +91,7 @@
 <textarea cols="30" rows="10" class="form-control" id="message" name="message"></textarea>
 </div>
 <div class="form-group">
-<input type="submit" class="btn btn-primary" id="submit" name="submit" value="Send Message">
+<button type="submit" class="pageclip-form__submit"> <span>Send</span> </button>
 </div>
 </form>
 </div>
@@ -174,4 +171,5 @@
 <script src="js/main.min.js" type="b1bfda8595a67de529fdc4fe-text/javascript"></script>
 <script src="js/custom.js" type="b1bfda8595a67de529fdc4fe-text/javascript"></script>
 <script src="https://ajax.cloudflare.com/cdn-cgi/scripts/7089c43e/cloudflare-static/rocket-loader.min.js" data-cf-settings="b1bfda8595a67de529fdc4fe-|49" defer=""></script></body>
+<script src="https://s.pageclip.co/v1/pageclip.js" charset="utf-8"></script>
 </html>
