--- a/contribute.html
+++ b/contribute.html
@@ -91,7 +91,7 @@
 <textarea cols="30" rows="10" class="form-control" id="message" name="message"></textarea>
 </div>
 <div class="form-group">
-<button type="submit" class="pageclip-form__submit"> <span>Send</span> </button>
+<button type="submit" class="pageclip-form__submit btn btn-primary"> <span>Send</span> </button>
 </div>
 </form>
 </div>
