Feat: Updated form in contribute
Desc: Updated form id and attribute t the contribute page.

--- a/contribute.html
+++ b/contribute.html
@@ -74,6 +74,7 @@
     <h1>Communicate to us your ideas...</h1>
     <p>And we'll get back to you as soon as possible</p>
 <form action="https://send.pageclip.co/q1FpNR9eYUV4T7GthQTOACIr08z5QrRM/nephron-ai" class="pageclip-form probootstrap-form" method="post" >
+<input type="hidden" value="nephron-ai-aaSg3e" id="form-header" class="form-header">
 <div class="form-group">
 <label for="name">Full Name</label>
 <input type="text" class="form-control" id="name" name="name">
