FEAT:Updated feature selection uing Chi2 squared algorithm
Desc:We have updated the model and haveoptimizied the accuracy to be beyong 0.997

--- a/classify.html
+++ b/classify.html
@@ -143,13 +143,13 @@
     <div class="qsix">
         <form id="forms classify-form">
             <span class="back">< Back</span> (<span>6 of 8</span>)
-        <h4>White Blood Cell Count</h4>
-        <p>The White blood cell count in <i>cells/cumm</i>. For example, 7800</p>
-        <br/><input type="number" placeholder="" id="wct"/><br/><br/>
+        <h4>Sodium Count</h4>
+        <p>It measures the amount of sodium in your blood in <i>mEq/L</i>. For example, 7800</p>
+        <br/><input type="number" placeholder="" id="sodt"/><br/><br/>
         <input type="submit" class="btn btn-primary next" value="Next">
         <div class="details"><br/>
-            <a href="javascript:void(0)" class="show-details">What are White Blood Cells?</a>
-            <p class="information">White blood cells (WBCs), also called leukocytes or leucocytes, are the cells of the immune system that are involved in protecting the body against both infectious disease and foreign invaders.</p>
+            <a href="javascript:void(0)" class="show-details">What is Sodium Count in blood?</a>
+            <p class="information">Sodium is key to helping send electrical signals between cells and controlling the amount of fluid in your body. Your body needs it for your cells to work the right way.</p>
         </div>
         </form>
     </div>
@@ -166,7 +166,20 @@
         </div>
         </form>
     </div>
-    <div class="qeight">
+    <div class="qseven">
+        <form id="forms classify-form">
+            <span class="back">< Back</span> (<span>7 of 8</span>)
+        <h4>Diabetes Mellitus</h4>
+        <p>Are you diabetic (have high blood sugar levels)?</p>
+        <br/><input type="number" placeholder="" id="dmt"/><br/><br/>
+        <input type="submit" class="btn btn-primary next" value="Next">
+        <div class="details"><br/>
+            <a href="javascript:void(0)" class="show-details">What are Diabetes Mellitus?</a>
+            <p class="information">Diabetes mellitus, commonly referred to as diabetes, is a group of metabolic disorders in which there are high blood sugar levels over a prolonged period. Symptoms of high blood sugar include frequent urination, increased thirst, and increased hunger.</p>
+        </div>
+        </form>
+    </div>
+    <div class="qnine">
         <form id="forms classify-form">
             <span class="back">< Back</span> (<span>8 of 8</span>)
         <h4>Hypertension</h4>
