FEAT:Updated feature selection uing Chi2 squared algorithm
Desc:We have updated the model and haveoptimizied the accuracy to be beyong 0.997

--- a/classify.html
+++ b/classify.html
@@ -171,13 +171,18 @@
             <span class="back">< Back</span> (<span>8 of 9</span>)
         <h4>Diabetes Mellitus</h4>
         <p>Are you diabetic (have high blood sugar levels)?</p>
-        <br/><input type="number" placeholder="" id="dmt"/><br/><br/>
+        <br>
+        <select class="select"  id="dmt">
+            <option class="dmt" value="">--Select--</option>
+            <option class="dmyes" value="yes">Yes</option>
+            <option class="dmno" value="no">No</option>
+        </select><br/><br/>
         <input type="submit" class="btn btn-primary next" value="Next">
         <div class="details"><br/>
             <a href="javascript:void(0)" class="show-details">What are Diabetes Mellitus?</a>
             <p class="information">Diabetes mellitus, commonly referred to as diabetes, is a group of metabolic disorders in which there are high blood sugar levels over a prolonged period. Symptoms of high blood sugar include frequent urination, increased thirst, and increased hunger.</p>
         </div>
-        </form>
+        </form> 
     </div>
     <div class="qnine">
         <form id="forms classify-form">
