FEAT: Updated ML Model

--- a/classify.html
+++ b/classify.html
@@ -68,7 +68,7 @@
         <form id="forms classify-form">
         <span class="clos">&times; Close</span> <span>(1 of 9)</span>
         <h4>Specific Gravity:</h4>
-        <p>You need to get a medical test for this or you can skip it. It is <i>numeric</i></p>
+        <p>You need to get a medical test for this. It is <i>numeric</i>. For example, 1.1</p>
         <input type="number" placeholder="" id="sgt"/><br/><br/>
         <input type="submit" class="btn btn-primary next" value="Next">
         <div class="details"><br/>
@@ -144,7 +144,7 @@
         <form id="forms classify-form">
             <span class="back">< Back</span> (<span>6 of 9</span>)
         <h4>Sodium Count</h4>
-        <p>It measures the amount of sodium in your blood in <i>mEq/L</i>. For example, 7800</p>
+        <p>It measures the amount of sodium in your blood in <i>mEq/L</i>. For example, 111</p>
         <br/><input type="number" placeholder="" id="sodt"/><br/><br/>
         <input type="submit" class="btn btn-primary next" value="Next">
         <div class="details"><br/>
